test/libhyperion/syntaxTests/abiEncoder/abi_encode_conversions_function_pointers.hyp
interface testInterface {
    function B(function (string calldata) external) external;
}

contract testContract {
    function g(string calldata) external {}
    function h(string memory) external {}

    function main() external view {
        abi.encodeCall(testInterface.B, (this.g));
        abi.encodeCall(testInterface.B, (this.h));
    }
}
// ----
// TypeError 4889: (41-77): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
